test/semantics/programs/invalid/invalid-operation5.guav
# Should fail since incompatible operand types

x = "string"
x *= 8.131
